compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__float_divide_complex_expr.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 121
expression: "\nfn go() {\n  case 1.0 >=. 0.0 {\n    True -> 2.0\n    False -> 4.0\n  } /. 2.0\n}\n"
---
----- SOURCE CODE

fn go() {
  case 1.0 >=. 0.0 {
    True -> 2.0
    False -> 4.0
  } /. 2.0
}


----- COMPILED JAVASCRIPT
import { divideFloat } from "../rakun.mjs";

function go() {
  return divideFloat(
    (() => {
      let $ = 1.0 >= 0.0;
      if ($) {
        return 2.0;
      } else {
        return 4.0;
      }
    })(),
    2.0
  );
}
