compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__wide_float_div.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\nfn go() {\n  111111111111111111111111111111. /. 22222222222222222222222222222222222.\n}\n"
---
import { divideFloat } from "../rakun.mjs";

function go() {
  return divideFloat(
    111111111111111111111111111111.,
    22222222222222222222222222222222222.
  );
}
